--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -251,7 +251,7 @@
                     </div>
                 {% endif %}
             {% if orderFees %}
-                <div class="upsell-fees margin-bottom">
+                <div class="upsell-fees margin-bottom checkout-upsell-fees">
                     
                         {% for fee in orderFees %}
                             {% if fee.is_added == True %}
