--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -423,6 +423,41 @@ select:not(.form-select) {
     </div>
     <div class="btn btn-success fixed-bottom" style="border-radius:0!important" id="create_campaign">Креири кампања</div>
 </div>
+<div class="row desktop" style="position:fixed;top:10%;left:1%;">
+    <ul class="list-group" style="max-width:250px" id="stored_audiences_list">
+        <li class="list-group-item bg-primary text-white default-list-item" aria-current="true">Публики бирани во AdSets</li>
+        {% for audience in stored_audiences %}
+        <li class="list-group-item" style="padding:4px 16px; position:relative">
+            <span>{{audience.name}}</span>
+            <span style="position:absolute; right:16px;cursor:pointer;background-color: white;padding-left:4px;" class="remove_stored_audience">&#10005;</span>
+            <input type="hidden" name="stored_audience_id" class="stored_audience_id_input" value="{{ audience.id }}">
+        </li>
+        {% endfor %}
+        <li class="list-group-item">
+            <button class="btn btn-outline-primary btn-sm" role="button" data-bs-toggle="modal" data-bs-target="#store_new_audience_modal">
+                Додади нов Audience
+            </button>
+        </li>
+    </ul>
+
+</div>
+<div class="modal fade" id="store_new_audience_modal" tabindex="-1" aria-labelledby="store_new_audienceLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Додај нов Audience</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="border border-primary rounder big-input rounded" id="store_new_audience_name_input" style="width:100%">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="store_new_audience_btn" data-bs-dismiss="modal">Додади</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock content %}
 {% block scripts %}
