--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -193,7 +193,11 @@ select:not(.form-select) {
   .big-input{
     height:37px!important;
   }
-
+  @media(max-width: 768px){
+    .desktop{
+        display:none;
+    }
+  }
 </style>
 <div class="alert alert-danger fixed-top text-center fw-bolder" role="alert" id="error_alert" style="display:none;"></div>
 <div class="alert alert-success fixed-top text-center fw-bolder" role="alert" style="display:none;" id="success_alert"></div>
