--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -428,7 +428,7 @@ select:not(.form-select) {
     <div class="btn btn-success fixed-bottom" style="border-radius:0!important" id="create_campaign">Креири кампања</div>
 </div>
 <div class="row desktop" style="position:fixed;top:5%;left:1%;">
-    <ul class="list-group" style="max-width:250px" id="stored_audiences_list">
+    <ul class="list-group" style="max-width:250px; max-height:750px!important;overflow-y:scroll!important" id="stored_audiences_list">
         <li class="list-group-item bg-primary text-white default-list-item" aria-current="true">Публики бирани во AdSets</li>
         {% for audience in stored_audiences %}
         <li class="list-group-item" style="padding:4px 16px; position:relative">
