--- a/analytics/templates/analytics/create_new_ad.html
+++ b/analytics/templates/analytics/create_new_ad.html
@@ -198,6 +198,10 @@ select:not(.form-select) {
         display:none;
     }
   }
+  .row.my-4.iframe_holder iframe {
+    min-height: 620px!important;
+  }
+
 </style>
 <div class="alert alert-danger fixed-top text-center fw-bolder" role="alert" id="error_alert" style="display:none;"></div>
 <div class="alert alert-success fixed-top text-center fw-bolder" role="alert" style="display:none;" id="success_alert"></div>
