--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -8,8 +8,8 @@
     <a href="{% url 'shop-home' %}" class="thankyou-proceed-to-home">ПРОДОЛЖИ СО КУПУВАЊЕ</a>
     <div class="thank-you-icon">
     <i class="fas fa-check-circle"></i>
-    <h2 class="thank-you-heading">Ви благодариме за нарачката</h2>
-    <p class="thank-you-message">Очекувајте телефонски повик од страна на нашите оператори за потврда на вашата нарачка</p>
+    <h2 class="thank-you-heading">Направивте вистински избор.</h2>
+    <p class="thank-you-message">Ви благодариме за нарачката <span style="text-transform: capitalize;">{{ name }}</span> 😊</p>
     </div>
    
     <div class="order-info">
