--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -279,6 +279,18 @@
             
         </form>
     </section>
+    <div id="checkout_form_use_offer_overlay" style="display:none;">
+        <section id="checkout_form_use_offer" style="position:relative">
+            <h1 style="margin-bottom: 8px;">Почекајте!</h2>
+            <p style="margin-bottom: 24px">Ви даваме бесплатна приоритетна достава на оваа нарачка!</p>
+            <h3>Нарачај сега и добиј ја приоритетната достава</h3>
+            <div style="display:inline-block;padding:24px; border:4px solid #00703d; border-radius:50%; margin:24px 0;">
+                <img src="{% static 'icons/truck.svg' %}" alt=""  width="120" height="120" style="transform: rotate(355deg);filter: invert(63%) sepia(83%) saturate(2949%) hue-rotate(359deg) brightness(101%) contrast(105%);">
+            </div>
+            <button id="accept_checkout_onClose_offer">Нарачај со приоритетна достава</button>
+            <button id="decline_checkout_onClose_offer">Не, фала</button>
+        </section>
+    </div>
 </div>
 <footer id="footer">
     <div class="footer-inner">
