--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p>Нарачките направени од 20 до 23 април ќе бидат доставени после 25-ти април</p></section>
+<!-- <section class="header-info"><p></p></section> !-->
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
