--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p>Нарачките направени на од 28 Април до 1 Мај ќе бидат пакувани и испратени на 2-ри Мај</p></section>
+<!-- <section class="header-info"><p></p></section> -->
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
