--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -30,7 +30,7 @@
             {% csrf_token %}
             <input type="hidden" value="" name="offer_ordered_product_id" id="offer_ordered_product_id">
             <h5>специјална понуда само денес</h3>
-            <h3>ЗА ВТОР КУПЕН ПРОИЗВОД 20% ПОПУСТ</h5>
+            <h3 style="padding-top:6px">ЗА ВТОР КУПЕН ПРОИЗВОД 20% ПОПУСТ</h5>
             <div class="offer-box">
             <p class="offer-timer" style="font-weight: 600;">ПОНУДАТА ИСТЕКУВА ЗА <br><span id="timer" style="font-size: 24px">03:00</span></p>
             <input type="hidden" class="order_id" value="{{ order.id }}">
