--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -94,7 +94,7 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
     {% include "shop/includes/header.html" %} 
-    <nav id="navigation">
+    <nav id="navigation" style="z-index:1000000000!important">
         <ul>
             <li class="navigation-item"><a href="https://greengoshop.mk/" class="navigation-title">ПОЧЕТНА</a></li>
             <li class="navigation-item"><a href="https://greengoshop.mk/product-category/najprodavani/" class="navigation-title">НАЈПРОДАВАНИ</a></li>
