--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -147,7 +147,7 @@
                 </tr>
                 <tr class="cart-provision">
                     <td>
-                        <p>Провизија</p>
+                        <p>Провизија за готовинско работење</p>
                     </td>
                     <td>
                         <p class="cart-provision-sum">20 ден</p>
