--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -93,7 +93,7 @@
                         </div>
                         {% endfor %}
                     <div class="order-row">
-                        <p>Провизија</p>
+                        <p>Провизија за готовинско работење</p>
                         <p>20 ден</p>
                     </div>
                     <div class="order-row">
