--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p style="padding: 0px 2px;">Известување од пошта: пратките за општина Центар, Куманово и Охрид, рок на достава 7 дена</p></section>
+<section class="header-info"><p style="padding: 0px 2px;">Известување од пошта: пратките за Охрид моментално имат рок на достава 7 дена</p></section>
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
