--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -338,6 +338,6 @@
 <section class="footer-section">
     <div class="footer-inner">
         <p>*Сликите се симболични и не ги гарантираат карактеристиките на предметите. Цените може да подлежат на промена без претходна најава. Сите прикажани цени се со пресметан ДДВ.</p>
-        <h4>Copyright 2023 © Сите права припаѓаат на GreenGoShop</h4>
+        <h4>Copyright {% now 'Y' %} © Сите права припаѓаат на GreenGoShop</h4>
     </div>
 </section>
