--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -53,11 +53,11 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p style="padding: 0px 2px;">Поради државните празници нарачките
-    направени од 1-6ти
-    Мај ќе бидат доставени
-    во тековната
-    недела после 6ти Мај</p></section>
+{#<section class="header-info"><p style="padding: 0px 2px;">Поради државните празници нарачките#}
+{#    направени од 1-6ти#}
+{#    Мај ќе бидат доставени#}
+{#    во тековната#}
+{#    недела после 6ти Мај</p></section>#}
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
