--- a/shop/templates/shop/includes/header.html
+++ b/shop/templates/shop/includes/header.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </header>
-<section class="header-info"><p style="padding: 0px 2px;">Поради годишен одмор нарачките направени помеѓу 23-31 Август ќе бидат испорачани после 1ви Септември</p></section>
+{#<section class="header-info"><p style="padding: 0px 2px;">Поради годишен одмор нарачките направени помеѓу 23-31 Август ќе бидат испорачани после 1ви Септември</p></section>#}
 <div id="sidecart">
     <div class="cart-close">
         <span id="close-cart">&#10006</span>
